# federated-collection-discovery

./: .codespellignore  .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  README.md  benchmark_request.sh  components.json  docker-compose.yaml  example_search.ipynb  index.html  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yaml
dev-docs/specs/: surface-upstream-api-failures.md
docker/: .dockerignore  Dockerfile.client  Dockerfile.server
src/: App.tsx  ColorModeSwitcher.tsx  config.ts  index.css  index.tsx
src/api/: search.ts
src/client/: Dockerfile  nginx.conf  package.json
src/client/docker/: Dockerfile
src/client/public/: index.html
src/client/src/: App.tsx  reportWebVitals.ts
src/client/src/api/: search.ts
src/client/src/components/: ApiDocModal.tsx  CommonTileLayer.tsx  HealthStatus.tsx  Logo.tsx  ResultsTable.tsx  SearchForm.tsx
src/components/: ApiConfigPanel.tsx  ApiDocModal.tsx  HealthStatus.tsx  MapModal.tsx  ResultsTable.tsx  SearchForm.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  calendar.tsx  card.tsx  date-picker.tsx  dialog.tsx  input.tsx  loading-spinner.tsx  popover.tsx  sheet.tsx  switch.tsx  table.tsx  tabs.tsx  tooltip.tsx
src/css/: react-datepicker.css  swagger-dark.css
src/server/: Dockerfile  README.md  pyproject.toml
src/server/app/: catalog_collection_search.py  catalog_search.py  catalog_search_service.py  cmr_collection_search.py  collection_search.py  config.py  free_text.py  hint.py  main.py  models.py  shared.py  stac_api_collection_search.py
src/server/docker/: Dockerfile
src/server/federated_collection_discovery/: cmr_collection_search.py  collection_search.py  free_text.py  hint.py  main.py  models.py  shared.py  stac_api_collection_search.py
src/server/tests/: conftest.py  test_api.py  test_catalog_collection_search.py  test_catalog_search.py  test_catalog_search_service.py  test_cmr_collection_search.py  test_collection_search.py  test_free_text.py  test_hint.py  test_stac_api_collection_search.py
src/server/tests/cassettes/test_cmr_collection_search/: test_base.yaml  test_spatial_extent_from_polygon.yaml
src/server/tests/cassettes/test_collection_search/: test_stac_api_and_cmr.yaml
src/utils/: api-config.ts  hooks.ts  map-utils.ts  responsive.ts
tests/: conftest.py  test_api.py  test_catalog_search.py
