[project]
name = "federated-collection-discovery-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["federated-collection-discovery"]


[tool.uv.sources]
federated-collection-discovery = { path = "src/server" }

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "jupyterlab>=4.2.5",
    "pre-commit>=4.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-recording>=0.13.2",
    "pytest>=8.3.3",
    "requests-mock>=1.12.1",
    "ruff>=0.6.9",
    "types-requests>=2.32.0.20241016",
    "uvicorn>=0.30.1"
]
