[project]
name = "federated-collection-discovery-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "stac-fastapi-collection-discovery[server]",
]

[tool.uv.sources]
stac-fastapi-collection-discovery = { git = "https://github.com/developmentseed/stac-fastapi-collection-discovery", rev = "v0.2.1" }


